# OpenGeode-ModuleTemplate

./: CMakeLists.txt  README.md  azure-pipelines.yml
.github/workflows/: CD.yml  CI.yml  deploy.yml  manual_release.yml  test.yml  test_pr.yml
bindings/python/: CMakeLists.txt  __init__.py  copy_wheel.cmake  mylib.py  requirements.in  requirements.txt  setup.py
bindings/python/src/: CMakeLists.txt
bindings/python/src/mylib/: CMakeLists.txt  mylib.cpp
bindings/python/tests/: CMakeLists.txt
bindings/python/tests/mylib/: CMakeLists.txt  test-py-hello-world.py
cmake/: Doxyfile.in  MyModuleConfig.cmake.in  OpenGeode-MyModuleConfig.cmake.in
include/mylib/: common.h  common.hpp  hello_world.h  hello_world.hpp
src/mylib/: CMakeLists.txt  common.cpp  hello_world.cpp
tests/: CMakeCache.txt  CMakeLists.txt
tests/mylib/: CMakeLists.txt  test-hello-world.cpp
